fix home page stats spacing

--- a/wp-content/themes/elainestudy/src/scss/layout/font-styles.scss
+++ b/wp-content/themes/elainestudy/src/scss/layout/font-styles.scss
@@ -131,7 +131,7 @@ h5.h5-heading-alt {
     text-align:center;
     color: $es-blue;
     @include bold();
-    font-size: 24px;
+    font-size: 1.25vw;
     line-height: 40px !important;
     padding-top:30px;
 }
@@ -272,6 +272,33 @@ h3.stat-plus-sign {
     li.privacy-list-item {
         font-size: 23px;
         line-height: 38px  !important;
+    }
+    h3.stat-lg-number {
+    font-size:120px;
+    line-height: 138px;
+    }
+
+    h3.stat-lg-text {
+    font-size: 40px;
+    line-height: 45px;
+    }
+
+    h3.stat-plus-sign {
+    font-size:68px;
+    line-height: 78px;
+    }
+
+    h3.stat-md-number {
+    font-size:101px;
+    line-height: 115px;
+    }
+    p.stat-md-text {
+    font-size:22px;
+    line-height: 26px;
+    }
+    h5.h5-heading-alt {
+    font-size: 24px;
+    line-height: 40px !important;
     }
 }
 @media all and (max-width: 980px) {
