--- a/wp-content/themes/elainestudy/src/scss/layout/layout.scss
+++ b/wp-content/themes/elainestudy/src/scss/layout/layout.scss
@@ -273,8 +273,10 @@ div.es-btn {
         /* font-size: 23px;
         line-height: 38px !important; */
         &.w-214 {
-            width: 100%;
+            /* width: 100%; */
+
             margin: 0 auto;
+            margin-top: 25px;
         }
         &.w-290 {
             width: 100%;
